--- a/package.json
+++ b/package.json
@@ -1,34 +1,56 @@
 {
-  "name": "TravelApp",
+  "name": "travelapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "webpack serve --mode=development --config webpack.config.js",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.74.5"
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "react": "^18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
+    "react-native-web": "^0.19.12",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.87",
     "@react-native/eslint-config": "0.74.87",
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
+    "@react-navigation/stack": "^6.4.1",
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "ajv": "^8.17.1",
     "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-react-native-web": "^0.19.12",
     "eslint": "^8.19.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-dom": "^18.3.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.0.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
